--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1042,7 +1042,7 @@
       }
     }
   },
-  
+
   "profile": {
     "title": "Настройка профиля",
     "navigation": {
@@ -1113,8 +1113,7 @@
         },
         "edit": "Редактировать"
       }
-},
-
+    },
 
     "email_block": {
       "title": "Изменение E-mail",
@@ -1201,14 +1200,29 @@
     }
   },
 
-    "add_organization": {
-    "title": "Добавление организации",
-    "types": {
-      "self_employed": "Самозанятый",
-      "legal": "Юр. лицо и ИП"
+  "organization": {
+    "title": "Моя организация",
+
+    "logout": {
+      "title": "Выход из аккаунта",
+      "description": "Вы уверены, что хотите выйти из своего аккаунта? Вам потребуется войти заново, чтобы получить доступ к своим данным.",
+      "buttons": {
+        "cancel": "Отменить",
+        "logout": "Выход"
+      }
     },
-    "add_form": {
-      "title": "Заявка на добавление организации",
+
+    "login": {
+      "password": "По паролю",
+      "certificate": "По ЭЦП"
+    },
+
+    "form": {
+      "title": {
+        "add": "Заявка на добавление организации",
+        "data": "Данные организации"
+      },
+
       "legal": {
         "title": "Тип организации",
         "text": "Выберите тип организации - Юридическое лицо, ИП или Самозанятый.",
@@ -1244,19 +1258,17 @@
       "didox": {
         "text": "После нажатия кнопки «Подтвердить» вы будете перенаправлены на сайт Didox для подписания публичной оферты. После успешного подтверждения ваша организация будет добавлена и сохранена на платформе."
       }
-
-
     },
 
     "not_found": {
-    "types": {
-      "self_employed": "ПИНФЛ",
-      "legal": "ИНН"
-    },
+      "types": {
+        "self_employed": "ПИНФЛ",
+        "legal": "ИНН"
+      },
       "title": "не найден в системе Didox",
       "text": "Для продолжения работы необходимо зарегистрировать самозанятого в Didox. Нажмите «Зарегистрировать» и пройдите процесс регистрации. Если у вас остались вопросы, рекомендуем ознакомиться с подробным гайдом: ",
       "link": "Как зарегистрироваться в Didox, если у меня Самозанятый?",
-      
+
       "buttons": {
         "register": "Зарегистрировать",
         "cancel": "Отменить"
@@ -1398,6 +1410,14 @@
         "error": {
           "required": "несуществующая почта"
         }
+      },
+      "password": {
+        "title": "Пароль",
+        "default_value": "12345678",
+        "description": "Введите пароль, который будет использоваться для доступа к вашей учетной записи.",
+        "error": {
+          "required": "введите пароль"
+        }
       }
     },
 
@@ -1409,7 +1429,6 @@
       "text2": "ознакомлен и принимаю их."
     }
   },
-
 
   "add_profile": {
     "add_profile": "Добавление данных",
@@ -1556,6 +1575,14 @@
         "description": "Укажите ваш актуальный адрес электронной почты. На этот e-mail могут приходить уведомления о статусе выплат и другие важные сообщения.",
         "error": {
           "required": "несуществующая почта"
+        }
+      },
+      "password": {
+        "title": "Пароль",
+        "default_value": "12345678",
+        "description": "Введите пароль, который будет использоваться для доступа к вашей учетной записи.",
+        "error": {
+          "required": "введите пароль"
         }
       }
     },
@@ -2402,7 +2429,7 @@
         "alert": "Заполните все поля..."
       }
     },
-    "add_organization": {
+    "organization": {
       "accept": {
         "success": "Организация успешно отправлена на модерацию",
         "error": "При добавлении организации произошла ошибка"
@@ -2668,7 +2695,6 @@
           "banned": "Заблокированный",
           "deleted": "Удаленный"
         },
-
 
         "ban": {
           "title": "Блокировка канала",
@@ -2948,7 +2974,7 @@
   "public_offer_page": {
     "title": "Пользовательское соглашение"
   },
-  
+
   "service_rules_page": {
     "title": "Правила пользования"
   },
