--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1201,6 +1201,14 @@
   },
 
   "organization": {
+    "not_login": {
+      "title": "Вам необходимо добавить организацию",
+      "description": "Чтобы продолжить работу с платформой, вам необходимо добавить организацию. Это нужно для оформления документов, получения выплат на расчётный счёт и участия в рекламных кампаниях.",
+      "buttons": {
+        "add": "Добавить"
+      }
+    },
+
     "title": "Моя организация",
 
     "logout": {
@@ -1213,8 +1221,30 @@
     },
 
     "login": {
-      "password": "По паролю",
-      "certificate": "По ЭЦП"
+      "didox": {
+        "title": "Вход в систему",
+        "description": "Выберите тип авторизации и заполните данные для входа в аккаунт",
+        "choose_type": "Как вы хотите войти в систему?",
+        "no_account": "Нет аккаунта?",
+        "register": "Зарегистрироваться",
+
+        "type": {
+          "password": "По паролю",
+          "certificate": "По ключу"
+        },
+
+        "certificate": {
+          "until": "до",
+          "placeholder": "Выберите ключ",
+          "loading": "Загрузка ключей...",
+          "not_found": "Ключи не найдены",
+          "error": "Приложение E-IMZO не включено или не найдено на вашем устройстве"
+        },
+
+        "buttons": {
+          "login": "Войти в аккаунт"
+        }
+      }
     },
 
     "form": {
@@ -1229,19 +1259,25 @@
         "default_value": "Не выбрано"
       },
       "PNFL": {
-        "title": "ПИНФЛ",
-        "default_value": "12345678901234",
-        "description": "Персональный идентификационный номер физического лица. Введите корректный ПИНФЛ, так как он необходим для проверки ваших данных.",
+        "title": "ИНН/ПИНФЛ",
+        "default_value": "ИНН/ПИНФЛ",
         "error": {
-          "required": "неверный формат, количество символов - 14"
+          "required": "неверное количество символов, для ИНН - 9, для ПИНФЛ - 14"
         }
       },
       "INN": {
         "title": "ИНН",
         "default_value": "123456789",
-        "description": "Укажите идентификационный номер налогоплательщика (ИНН) вашей компании или индивидуального предпринимателя. Этот номер используется для налогового учета и идентификации организации.",
         "error": {
           "required": "неверный формат, количество символов - 9"
+        }
+      },
+
+      "password": {
+        "title": "Пароль",
+        "default_value": "12345678",
+        "error": {
+          "required": "введите пароль"
         }
       },
 
