--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3022,5 +3022,33 @@
       "load": "Загружаем соглашение",
       "fail": "Не удалось загрузить соглашение"
     }
+  },
+
+  "documents_page": {
+    "title": "Документы",
+    "description": "Список документов для просмотра и подписания в системе Didox.",
+
+    "tabs": {
+      "inbox": "Входящие",
+      "outbox": "Исходящие",
+      "draft": "Черновики"
+    },
+
+    "card": {
+      "contract": {
+        "label": "Номер и дата договора"
+      },
+      "updated": "Дата обновления",
+      "counterparty": {
+        "title": "Контрагент",
+        "inn": "ИНН"
+      },
+      "price": {
+        "title": "Стоимость",
+        "delivery": "Стоимость поставки",
+        "vat": "Сумма НДС",
+        "withVat": "Стоимость с НДС"
+      }
+    }
   }
 }
