--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1210,6 +1210,28 @@
       }
     },
 
+    "offer_sign": {
+      "title": "Подписать оферту",
+      "description": "Для начала работы с сервисом необходимо ознакомиться и принять условия публичной оферты",
+      "requirements": [
+        { "item": "Ознакомление с условиями использования" },
+        { "item": "Согласие с политикой конфиденциальности" },
+        { "item": "Подтверждение правомочности организации" }
+      ],
+      "warning": "Доступ к функциям сервиса будет предоставлен только после подписания оферты",
+      "authorization_required": {
+        "title": "Требуется авторизация",
+        "subtitle": "Необходимо войти с ЭЦП ключом",
+        "description": "Для подписания оферты требуется предварительная авторизация в системе через ЭЦП",
+        "section": "Перейдите в раздел",
+        "organization_data": "Данные организации"
+      },
+      "legal_notice": "Юридически обязывающий документ",
+      "buttons": {
+        "sign": "Подписать"
+      }
+    },
+
     "title": "Моя организация",
 
     "logout": {
